Extensive refactor. * Most uses of resaver.Analysis changed to Optional<resaver.Analysis> * More use of functional methods for dealing with resaver.Analysis. * Worrier is no longer reused, it is specific to a savefile. * Worrier gets an instance of the previous worrier for comparison. * More j2html usage. * Eliminated a bit of spaghetti in Scanner.