@@ -29,8 +29,10 @@ import resaver.Game;
 import resaver.ess.ESS;
 import resaver.ess.Header;
 import static resaver.ResaverFormatting.makeHTMLList;
-import resaver.ess.RefID;
 import resaver.ess.WStringElement;
+import static j2html.TagCreator.*;
+import j2html.tags.DomContent;
+import java.util.HashMap;
 
 /**
  *
@@ -38,123 +40,166 @@ import resaver.ess.WStringElement;
  */
 final public class Worrier {
 
-    public Worrier() {
-        this.message = null;
+    public Worrier(ESS.Result result, Optional<Worrier> previous) {
         this.shouldWorry = false;
         this.disableSaving = false;
-        this.previousCanaries = null;
-        this.previousNamespaces = null;
-        this.previousESS = Optional.empty();
+        this.ESS = result.ESS;
+        this.PAPYRUS = Optional.of(result.ESS).map(ess -> ess.getPapyrus()).orElse(null);
+        
+        // Get data from previous worrier for comparison.
+        this.previousESS = previous.map(p -> p.ESS);
+        this.previousCanaries = previous.map(p -> p.canaries).orElse(new HashMap<>());
+        this.previousNamespaces = previous.map(p -> p.namespaces).orElse(new HashMap<>());
+        
+        // Find all the namespaces (if they exist)
+        this.namespaces = PAPYRUS.getScriptInstances().values().parallelStream()
+                .filter(instance -> instance.getScriptName().toString().contains(":"))
+                .collect(Collectors.groupingBy(instance -> instance.getScriptName().toString().split(":")[0]));
+
+        // Find all the canaries
+        this.canaries = PAPYRUS.getScriptInstances().values().parallelStream()
+                .filter(instance -> instance.hasCanary())
+                .collect(Collectors.toMap(instance -> instance.getScript(), instance -> instance.getCanary()));      
+        
+        // Do the analysis.
+        this.MESSAGE = this.check(result);
+    }
+   
+    public DomContent getMessage() {
+        return this.MESSAGE;
     }
 
-    private CharSequence checkFatal(ESS.Result result) {
-        final StringBuilder BUF = new StringBuilder();
-        final ESS ESS = result.ESS;
-        final Papyrus PAPYRUS = ESS.getPapyrus();
+    public boolean shouldDisableSaving() {
+        return this.disableSaving;
+    }
 
+    public boolean shouldWorry() {
+        return this.shouldWorry;
+    }
+
+    private void fatal(String tag, String msg) {
+        msg(tag, text(msg), true);
+    }
+    
+    private void warn(String tag, String msg) {
+        msg(tag, text(msg), false);
+    }
+    
+    private void msg(String tag, DomContent msg, boolean fatal) {
+        if (fatal) MESSAGES_FATAL.add(p(strong(em(tag)), msg));
+        else MESSAGES_WARNING.add(p(strong(tag), msg));
+    }
+    
+    private DomContent check(ESS.Result result) {
+        MESSAGES_FATAL.clear();
+        MESSAGES_WARNING.clear();
+        
+        this.shouldWorry = false;
+        this.disableSaving = false;
+
+        this.checkFatal();
+        this.checkNonFatal(result);
+        
+        return html(body(
+                this.shouldDisableSaving() 
+                        ? p(h3("Serious problems were identified"), h2("Saving is disabled. Trust me, it's for your own good."), hr())
+                        : emptyTag("IGNORE"),
+                each(this.MESSAGES_FATAL, t->t),
+                hr(),
+                this.checkPerformance(result),
+                hr(),
+                this.shouldWorry()
+                        ? text(this.shouldDisableSaving() 
+                                ? "Additional problems were identified"
+                                : "Potential problems were identified")
+                        : emptyTag("No worries"),
+                each(this.MESSAGES_WARNING, t->t)
+        ));
+    }
+
+    private void checkFatal() {
         // Check the first fatal condition -- truncation.
         if (ESS.isBroken()) {
-            BUF.append("<p><em>THIS FILE IS BROKEN.</em> It is corrupted and can never be recovered, not even by the pure-hearted love of a Paraguay Jaguar.");
+            this.shouldWorry = true;
+            this.disableSaving = true;
+            
+            fatal("Broken savefile", "It is corrupted and can never be recovered, not even by the unhindered zeal of an Andean Mountain Tapir.");
 
             if (ESS.isPluginOverflow()) {
-                BUF.append("<br/><strong>PLUGIN OVERFLOW ERROR.</strong> This is caused by having exactly 255 or 256 plugins installed.");
+                fatal("Plugin overflow", "This is caused by having exactly 255 or 256 plugins installed.");
             }
 
             if (ESS.isTruncated()) {
-                BUF.append("<br/><strong>TRUNCATED SAVEFILE.</strong> This is usually caused by too many scripts running at once, recursive scripts without proper boundary conditions, excessive size, or multithreading problems.");
+                fatal("Truncated file", "This is usually caused by too many scripts running at once, recursive scripts without proper boundary conditions, excessive size, or multithreading problems.");
             }
                 
             if (PAPYRUS == null) {
-                BUF.append("<br/><strong>No Papyrus section.</strong>");
+                fatal("NO papyrus section", "The entire papyrus block is missing. This is sometimes caused by Papyrus being overloaded or by the game running too slowly to keep up with itself.");
+                
             } else {
                 if (PAPYRUS.getStringTable().isTruncated()) {
                     int missing = PAPYRUS.getStringTable().getMissingCount();
-                    BUF.append("<br/><strong>TRUNCATED STRING TABLE.</strong> ")
-                            .append(missing)
-                            .append(" strings missing. The cause of this is unknown, but sometimes involves the scripts that append to strings in a loop.");
+                    fatal("Truncated string-table", "%d strings missing. The cause of this is unknown, but sometimes involves the scripts that append to strings in a loop.".formatted(missing));
                 } 
                 
                 if (PAPYRUS.isTruncated()) {
-                    BUF.append("<br/><strong>TRUNCATED PAPYRUS BLOCK.</strong> This is usually caused by too many scripts running at once, or recursive scripts without proper boundary conditions.");
+                    fatal("Truncated papyrus block", "This is usually caused by too many scripts running at once, or recursive scripts without proper boundary conditions.");
                 }
-                
+
                 if (Arrays.stream(ESS.getFormIDs()).anyMatch(i -> i == 0)) {
+                    long zeroes = Arrays.stream(ESS.getFormIDs()).filter(i -> i == 0).count();
+                    long total = ESS.getFormIDs().length;
                     int present = 0;
                     while (present < ESS.getFormIDs().length && ESS.getFormIDs()[present] != 0) {
                         present++;
                     }
-                    long zeroes = Arrays.stream(ESS.getFormIDs()).filter(i -> i == 0).count();
-                    
-                    BUF.append("<br/><strong>TRUNCATED FORMID ARRAY</strong>. ")
-                            .append(present).append('/').append(ESS.getFormIDs().length)
-                            .append(" formIDs read and ")
-                            .append(zeroes)
-                            .append(" null values in total.\nThis is sometimes caused by updating mods without following their proper updating procedure.");
+                    fatal("Truncated formID array", "%d/%d formIDs read and %d  null values in total. This is sometimes caused by updating mods without following their proper updating procedure.".formatted(present, total, zeroes));
                 }
             }
-            BUF.append("</p>");
-
-            this.shouldWorry = true;
-            this.disableSaving = true;
         }
 
         // Check the second fatal condition -- the string table bug.
         if (PAPYRUS != null && PAPYRUS.getStringTable().hasSTB()) {
-            BUF.append("<p><em>THIS FILE HAS THE STRING-TABLE-BUG.</em> It is corrupted and can never be recovered, not even with lasers or cheetah blood.</p>");
             this.shouldWorry = true;
             this.disableSaving = true;
+            fatal("The string-table bug", "This usually only happens in Skyrim Legendary Edition without Meh321's patch, or in very very old versions of Fallout 4. It is a fatal error and the savefile can never be recovered, not even with lasers or cheetah blood.");
         }
-
-        return BUF;
     }
 
-    private CharSequence checkPerformance(ESS.Result result) {
-        final StringBuilder BUF = new StringBuilder();
-
-        double time = result.TIME_S;
-        double size = result.SIZE_MB;
-
-        BUF.append("<p>The savefile was successfully loaded.<ul>");
-        BUF.append(String.format("<li>Read %1.1f mb in %1.1f seconds.</li>", size, time));
-        if (result.ESS.hasCosave()) {
-            BUF.append(String.format("<li>%s co-save was loaded.</li>", result.GAME.COSAVE_EXT.toUpperCase()));
-        } else {
-            BUF.append("<li>No co-save was found.</li>");
-        }
-
-        BUF.append("</ul></p>");
-        return BUF;
-    }
-
-    private CharSequence checkNonFatal(ESS.Result result) {
-        final StringBuilder BUF = new StringBuilder();
-        final Papyrus PAPYRUS = result.ESS.getPapyrus();
-        
+    private void checkNonFatal(ESS.Result result) {
         if (PAPYRUS == null) {
-            return BUF;
+            this.shouldWorry = true;
+            return;
         }
 
         int unattached = PAPYRUS.countUnattachedInstances();
         if (unattached > 0) {
-            String msg = String.format("<p>There are %d unattached instances.</p>", unattached);
-            BUF.append(msg);
-            if (result.GAME != Game.FALLOUT4 || unattached > 2) {
-                this.shouldWorry = true;
-            }
+            this.shouldWorry = (result.GAME != Game.FALLOUT4 || unattached > 2);
+            warn("Unattached instances", "There are %s script instances that are not attached to anything in-game.".formatted(unattached));
         }
 
         int[] undefined = PAPYRUS.countUndefinedElements();
 
         if (undefined[0] > 0) {
-            String msg = String.format("<p>There are %d undefined elements.</p>", undefined[0]);
-            BUF.append(msg);
             this.shouldWorry = true;
+            warn("Undefined elements", "There are %d elements whose definition is missing, which is usually caused by updating or uninstalling mods.".formatted(undefined[0]));
         }
 
         if (undefined[1] > 0) {
-            String msg = String.format("<p>There are %d undefined threads.</p>", undefined[1]);
-            BUF.append(msg);
             this.shouldWorry = true;
+            warn("Undefined threads", "There are %d undefined threads, which is a serious problem usually caused by updating or uninstalling mods.".formatted(undefined[1]));
+        }
+
+        long missingParents = PAPYRUS.getScripts().values().stream().filter(s -> s.isMissingParent()).count();
+        if (missingParents > 0) {
+            this.shouldWorry = true;
+            warn("Missing parents", "There are %s scripts with missing parents, which is usually caused by updating a mod to a new version that has major script changes.".formatted(missingParents));
+        }
+
+        long noParents = PAPYRUS.getScripts().values().stream().filter(s -> s.isNoParent()).count();
+        if (noParents > 0) {
+            this.shouldWorry = true;
+            warn("No parents", "There are %s scripts with no parent script, which is usually caused by updating a mod to a new version that has major script changes.".formatted(noParents));
         }
 
         int numStacks = PAPYRUS.getActiveScripts().size();
@@ -191,24 +236,20 @@ final public class Worrier {
         if (!frames.isEmpty()) {
             threads.sort((a, b) -> threadCounts.get(b).compareTo(threadCounts.get(a)));
             frames.sort((a, b) -> frameCounts.get(b).compareTo(frameCounts.get(a)));
-
-            Script most1 = threads.get(0);
-            Script most2 = frames.get(0);
-
-            long numFrames = frameCounts.values().stream().mapToLong(v -> v).sum();
-
-            if (numStacks > 200 || numFrames > 1000) {
-                BUF.append(String.format("<p>There are %d stacks and %d frames, which probably indicates a problem.<br/>", numStacks, numFrames));
-                BUF.append(String.format("%s occurs the most often as a stack frame (%d occurrences)</p>", most2.toHTML(null), frameCounts.get(most2)));
-                //BUF.append(String.format("%s occurs the most often as a thread (%d occurrences)</p>", most1.toHTML(null), threadCounts.get(most1)));
-
+            int numFrames = (int)frameCounts.values().stream().mapToLong(v -> v).sum();
+            
+            if (numStacks > 50 || numFrames > 150) {
                 this.shouldWorry = true;
+                warn("Stack count", "There are %d stacks and %d frames, which may indicate a problem.".formatted(numStacks, numFrames));
 
-            } else if (numStacks > 50 || numFrames > 150) {
-                BUF.append(String.format("<p>There are %d stacks and %d frames, which may indicate a problem.</p>", numStacks, numFrames));
-                //BUF.append(String.format("%s occurs the most often (%d occurrences)</p>", most2.toHTML(null), frameCounts.get(most2)));
-
-                this.shouldWorry = true;
+                if (numStacks > 200 || numFrames > 1000) {
+                    if (frames.size() >= 1) {
+                        warn("Frame count", "%s occurs the most often as a stack frame (%d occurrences)</p>".formatted(frames.get(0).toHTML(null), frameCounts.get(frames.get(0))));
+                    }
+                    if (frames.size() >= 2) {
+                        warn("Frame count", "%s occurs the second most often as a stack frame (%d occurrences)</p>".formatted(frames.get(1).toHTML(null), frameCounts.get(frames.get(1))));
+                    }
+                }
             }
 
             List<ActiveScript> deep = PAPYRUS.getActiveScripts().values().stream()
@@ -217,25 +258,13 @@ final public class Worrier {
             deep.sort((a1, a2) -> Integer.compare(a2.getStackFrames().size(), a1.getStackFrames().size()));
 
             if (!deep.isEmpty()) {
+                this.shouldWorry = true;
                 ActiveScript deepest = deep.get(0);
                 int depth = deepest.getStackFrames().size();
-                String msg = String.format("<p>There is a stack %d frames deep (%s).</p>", depth, deepest.toHTML(null));
-                BUF.append(msg);
-                this.shouldWorry = true;
+                warn("Stack depth", "There is a stack %d frames deep (%s).".formatted(depth, deepest.toHTML(null)));
             }
         }
 
-        // Get a map of namespaces to scriptInstances in that namespace.
-        Map<String, List<ScriptInstance>> currentNamespaces = PAPYRUS.getScriptInstances().values()
-                .parallelStream()
-                .filter(instance -> instance.getScriptName().toString().contains(":"))
-                .collect(Collectors.groupingBy(instance -> instance.getScriptName().toString().split(":")[0]));
-
-        Map<Script, Integer> currentCanaries = PAPYRUS.getScriptInstances().values()
-                .parallelStream()
-                .filter(instance -> instance.hasCanary())
-                .collect(Collectors.toMap(instance -> instance.getScript(), instance -> instance.getCanary()));
-       
         previousESS.ifPresent(previous -> {
             if (areProbablySequential(previous, result.ESS)) {
                 Header H1 = previous.getHeader();
@@ -246,14 +275,13 @@ final public class Worrier {
                     int currentSize = result.ESS.calculateSize();
                     double difference = 200.0 * (currentSize - previousSize) / (currentSize + previousSize);
                     if (difference < -5.0) {
-                        String msg = String.format("<p>This savefile has %2.2f%% less papyrus data the previous one.</p>", -difference);
-                        BUF.append(msg);
                         this.shouldWorry = true;
+                        warn("Data drop", "This savefile has %2.2f%% less papyrus data the previous one.".formatted(-difference));
                     }
                 }
 
                 List<String> missingNamespaces = this.previousNamespaces.keySet().stream()
-                        .filter(namespace -> !currentNamespaces.containsKey(namespace))
+                        .filter(namespace -> !namespaces.containsKey(namespace))
                         .filter(namespace -> this.previousNamespaces.get(namespace).stream()
                         .map(instance -> instance.getRefID())
                         .filter(refID -> !refID.isZero())
@@ -261,22 +289,20 @@ final public class Worrier {
                         .collect(Collectors.toList());
 
                 if (!missingNamespaces.isEmpty()) {
-                    String msg = "This savefile has %d missing namespaces (the Canary error).";
-                    BUF.append(makeHTMLList(msg, missingNamespaces, LIMIT, i -> i));
                     this.shouldWorry = true;
+                    msg("Canary error", makeHTMLList("This savefile has missing namespaces.", missingNamespaces, LIMIT), false);
                 }
 
                 List<mf.Pair<Script,Integer>> canaryErrors = this.previousCanaries.keySet().stream()
-                        .filter(script -> currentCanaries.containsKey(script))
+                        .filter(script -> canaries.containsKey(script))
                         .filter(script -> previousCanaries.get(script) != 0)
-                        .filter(script -> currentCanaries.get(script) == 0)
+                        .filter(script -> canaries.get(script) == 0)
                         .map(mf.Pair.mapper(s->s, s->previousCanaries.get(s)))
                         .collect(Collectors.toList());
 
                 if (!canaryErrors.isEmpty()) {
-                    String msg = "This savefile has %d zeroed canaries.";
-                    BUF.append(makeHTMLList(msg, canaryErrors, LIMIT, CanaryErrorFormatter));
                     this.shouldWorry = true;
+                    msg("Canary error", makeHTMLList("This savefile has zeroed canaries.", canaryErrors, LIMIT, CanaryErrorFormatter), false);
                 }                
             }
         });
@@ -287,9 +313,8 @@ final public class Worrier {
                 .collect(Collectors.toList());
 
         if (!memberless.isEmpty()) {
-            String msg = "This savefile has %d script instances whose data is missing.";
-            BUF.append(makeHTMLList(msg, memberless, LIMIT, MemberlessFormatter));
             this.shouldWorry = true;
+            msg("Missing member data", makeHTMLList("This savefile has zeroed canaries.", memberless, LIMIT, MemberlessFormatter), false);
         }
 
         List<ScriptInstance> definitionErrors = PAPYRUS.getScriptInstances().values()
@@ -298,16 +323,21 @@ final public class Worrier {
                 .collect(Collectors.toList());
 
         if (!definitionErrors.isEmpty()) {
-            String msg = "This savefile has %d script instances with mismatched member data.";
-            BUF.append(makeHTMLList(msg, definitionErrors, LIMIT, DefinitionErrorFormatter));
             this.shouldWorry = true;
+            msg("Mismatched member data", makeHTMLList("This savefile has script instances with mismatched member data.", definitionErrors, LIMIT, DefinitionErrorFormatter), false);
         }
+    }
 
-        this.previousNamespaces = currentNamespaces;
-        this.previousCanaries = currentCanaries;
-        this.previousESS = Optional.of(result.ESS);
-
-        return BUF;
+    private DomContent checkPerformance(ESS.Result result) {
+        return p(text("The savefile was successfully loaded."), 
+            ul(
+                    li("Read %1.1f mb in %1.1f seconds.".formatted(result.TIME_S, result.SIZE_MB)),
+                    li(result.ESS.hasCosave() 
+                            ? "%s co-save was loaded.".formatted(result.GAME.COSAVE_EXT.toUpperCase())
+                            : "No co-save was found.")
+                    
+            )
+        );
     }
 
     static private boolean areProbablySequential(ESS prev, ESS next) {
@@ -323,55 +353,21 @@ final public class Worrier {
                 && H2.SAVENUMBER - H1.SAVENUMBER < 10;
     }
     
-    public void check(ESS.Result result) {
-        this.message = null;
-        this.shouldWorry = false;
-        this.disableSaving = false;
-
-        final CharSequence PERFORMANCE = this.checkPerformance(result);
-        final CharSequence FATAL = this.checkFatal(result);
-        final CharSequence NONFATAL = this.checkNonFatal(result);
-
-        final StringBuilder BUF = new StringBuilder();
-
-        if (this.shouldDisableSaving()) {
-            BUF.append("<h3>Serious problems were identified</h2><h3>Saving is disabled. Trust me, it's for your own good.</h3>");
-            BUF.append(FATAL).append("<hr/>");
-        }
-
-        BUF.append(PERFORMANCE).append("<hr/>");
-
-        if (this.shouldWorry()) {
-            BUF.append(this.shouldDisableSaving()
-                    ? "<h3>Additional problems were identified</h3>"
-                    : "<h3>Potential problems were identified</h3>");
-            BUF.append(NONFATAL).append("<hr/>");
-        }
-
-        this.message = BUF.toString();
-    }
-
-    public String getMessage() {
-        return this.message;
-    }
-
-    public boolean shouldDisableSaving() {
-        return this.disableSaving;
-    }
-
-    public boolean shouldWorry() {
-        return this.shouldWorry;
-    }
-
-    private String message;
     private boolean shouldWorry;
     private boolean disableSaving;
+    final private DomContent MESSAGE;
+    final private List<DomContent> MESSAGES_FATAL = new ArrayList<>();
+    final private List<DomContent> MESSAGES_WARNING = new ArrayList<>();
+    
+    final private ESS ESS;
+    final private Papyrus PAPYRUS;
+    final private Map<Script, Integer> canaries;
+    final private Map<String, List<ScriptInstance>> namespaces;
+    
     private Optional<ESS> previousESS;
-    private Map<Script, Integer> previousCanaries;
-    private Map<String, List<ScriptInstance>> previousNamespaces;
+    final private Map<Script, Integer> previousCanaries;
+    final private Map<String, List<ScriptInstance>> previousNamespaces;
 
-    //static final private Logger LOG = Logger.getLogger(Worrier.class.getCanonicalName());
-    //static final private PathMatcher MATCHER = FileSystems.getDefault().getPathMatcher("glob:**.{fos,ess}");
     static final private int LIMIT = 12;
     
     static final private Function<mf.Pair<Script,Integer>,String> CanaryErrorFormatter = i -> MessageFormat.format("{0} ({1}->0)", i.A.toHTML(null), i.B);    
